BARC UAT/src/objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>Asset_QC__c</fullName>
        <label>Asset QC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>Not Ok</fullName>
                </value>
                <value>
                    <fullName>Retest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>